layout das telas de login e cadastro finalizado

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,5 @@
 .root {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Lexend Deca', sans-serif;
     max-width: 600px;
     min-height: 100vh;
     margin: 0 auto;
